Setup sentry and fixed issue where nav menu was visible on first load.

--- a/public/locales/en-GB.json
+++ b/public/locales/en-GB.json
@@ -2,6 +2,7 @@
   "theSystem": "The System",
   "navigation": "Navigation",
   "info": "Info",
+  "systemFailedToLoad": "The System failed to load",
   "infoMenu": {
     "time": "Time",
     "secondsForOneDay": "{{seconds}} s = 1 day",
