Started the notifications view for followed planets.

--- a/public/locales/en-GB.json
+++ b/public/locales/en-GB.json
@@ -25,5 +25,8 @@
     "uranus": "Uranus",
     "neptune": "Neptune",
     "pluto": "Pluto"
+  },
+  "notifications": {
+    "followingPoint": "You will now follow {{point}} around the system. Click {{point}} again to stop following.`"
   }
 }
