Fixed up a couple of things and translated the notification message for the follower message.

--- a/public/locales/en-GB.json
+++ b/public/locales/en-GB.json
@@ -27,6 +27,6 @@
     "pluto": "Pluto"
   },
   "notifications": {
-    "followingPoint": "You will now follow {{point}} around the system. Click {{point}} again to stop following.`"
+    "followingPoint": "You will now follow {{point}} around the system. Click {{point}} again to stop following."
   }
 }
